--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: './dist'
+          retention-days: 1
 
   deploy:
     needs: build
@@ -40,3 +41,4 @@ jobs:
         uses: actions/deploy-pages@v3
         with:
           artifact_name: github-pages
+          retention-days: 1
