--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "pinia": "^3.0.1",
     "postcss-cli": "^11.0.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "wanakana": "^5.3.1"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
