--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "@fullcalendar/vue3": "^6.1.15",
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
-    "kuroshiro": "^1.2.0",
-    "kuroshiro-analyzer-kuromoji": "^1.1.0",
+    "japanese-kit": "^0.0.2",
     "pinia": "^3.0.1",
     "postcss-cli": "^11.0.0",
     "vue": "^3.5.13",
