--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@fullcalendar/vue3": "^6.1.15",
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
-    "jaconv": "^1.0.4",
+    "jp-conversion": "^0.0.7",
     "pinia": "^3.0.1",
     "postcss-cli": "^11.0.0",
     "vue": "^3.5.13",
