--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "migrate-customers": "node src/scripts/migrateCustomers.cjs",
+    "fix-customer-kana": "node src/scripts/fixCustomerKana.cjs"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
@@ -22,12 +24,19 @@
     "@koozaki/romaji-conv": "^2.0.31",
     "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
+    "firebase-admin": "^13.2.0",
+    "kuroshiro": "^1.2.0",
+    "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "pinia": "^3.0.1",
     "postcss-cli": "^11.0.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "wanakana": "^5.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/register": "^7.25.9",
     "@eslint/js": "^9.20.0",
     "@tailwindcss/vite": "^4.0.9",
     "@vitejs/plugin-vue": "^5.2.1",
