--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "kuroshiro-analyzer-kuromoji": "^1.1.0",
     "pinia": "^3.0.1",
     "postcss-cli": "^11.0.0",
+    "vanilla-autokana": "^1.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "wanakana": "^5.3.1"
